--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
-    <title>Music Player | HINOS CCB</title>
+    <link rel="stylesheet" href="./css/style.css">
+
+    <link rel="icon" type="image/png" href="./assets/fav-icon.png">
+
+    <title>Harmony MP3 | Hinos da Congregação Cristã no Brasil</title>
 </head>
 
 <body>
@@ -39,7 +43,7 @@
         </div>
     </div>
 
-    <script src="index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
